# olp-nixos-update

./: client.go  go.mod  main.go  server.go  updater.go
.github/workflows/: pr-build.yml  release.yml
client/: Cargo.toml  go.mod  main.go
client/src/: main.rs
server/: Cargo.toml  main.go
server/src/: main.rs
updater-client/: go.mod  main.go
